Change master docs workflow to be requested instead of on every commit

--- a/.github/workflows/prepare-release.yml
+++ b/.github/workflows/prepare-release.yml
@@ -11,6 +11,8 @@ jobs:
   prepare-release:
     runs-on: ubuntu-latest
 
+    if: github.ref == 'refs/heads/master'
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
